--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Victorious-life-studies_70709
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 70709-h/images/cover.jpg
 creator:
   author:
     agent_name: McQuilkin, Robert C.
     gutenberg_agent_id: '55878'
     url: http://www.gutenberg.org/2009/agents/55878
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70709#Victorious-life-studies
 gutenberg_issued: '2023-05-06'
 identifiers:
   gutenberg: '70709'
